template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkInterfaces_wl837_name": {
      "type": "String"
    },
    "networkSecurityGroups_wl_nsg_name": {
      "type": "String"
    },
    "publicIPAddresses_wl_ip_name": {
      "type": "String"
    },
    "virtualMachines_wl_name": {
      "type": "String"
    },
    "virtualNetworks_wl_vnet_name": {
      "type": "String"
    }
  },
  "resources": [
    {
      "apiVersion": "2025-05-01",
      "location": "koreacentral",
      "name": "[parameters('networkSecurityGroups_wl_nsg_name')]",
      "properties": {
        "securityRules": [
          {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_wl_nsg_name'), 'SSH')]",
            "name": "SSH",
            "properties": {
              "access": "Allow",
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "destinationPortRange": "22",
              "destinationPortRanges": [],
              "direction": "Inbound",
              "priority": 300,
              "protocol": "TCP",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "sourcePortRange": "*",
              "sourcePortRanges": []
            },
            "type": "Microsoft.Network/networkSecurityGroups/securityRules"
          }
        ]
      },
      "type": "Microsoft.Network/networkSecurityGroups"
    },
    {
      "apiVersion": "2025-05-01",
      "location": "koreacentral",
      "name": "[parameters('publicIPAddresses_wl_ip_name')]",
      "properties": {
        "ddosSettings": {
          "protectionMode": "VirtualNetworkInherited"
        },
        "idleTimeoutInMinutes": 4,
        "ipAddress": "20.214.105.224",
        "ipTags": [],
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static"
      },
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "type": "Microsoft.Network/publicIPAddresses"
    },
    {
      "apiVersion": "2025-05-01",
      "location": "koreacentral",
      "name": "[parameters('virtualNetworks_wl_vnet_name')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "enableDdosProtection": false,
        "privateEndpointVNetPolicies": "Disabled",
        "subnets": [
          {
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_wl_vnet_name'), 'default')]",
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": []
      },
      "type": "Microsoft.Network/virtualNetworks"
    },
    {
      "apiVersion": "2025-04-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_wl837_name'))]"
      ],
      "location": "koreacentral",
      "name": "[parameters('virtualMachines_wl_name')]",
      "properties": {
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "billingProfile": {
          "maxPrice": 0.04
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        },
        "evictionPolicy": "Deallocate",
        "hardwareProfile": {
          "vmSize": "Standard_D2as_v5"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_wl837_name'))]",
              "properties": {
                "deleteOption": "Delete"
              }
            }
          ]
        },
        "osProfile": {
          "adminUsername": "arfan",
          "allowExtensionOperations": true,
          "computerName": "[parameters('virtualMachines_wl_name')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "patchSettings": {
              "assessmentMode": "ImageDefault",
              "patchMode": "ImageDefault"
            },
            "provisionVMAgent": true
          },
          "requireGuestProvisionSignal": true,
          "secrets": []
        },
        "priority": "Spot",
        "securityProfile": {
          "securityType": "TrustedLaunch",
          "uefiSettings": {
            "secureBootEnabled": true,
            "vTpmEnabled": true
          }
        },
        "storageProfile": {
          "dataDisks": [],
          "diskControllerType": "SCSI",
          "imageReference": {
            "offer": "ubuntu-24_04-lts",
            "publisher": "canonical",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "deleteOption": "Delete",
            "diskSizeGB": 30,
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_wl_name'), '_OsDisk_1_cb314f2bd7a44f869dcde736a6cecf97'))]",
              "storageAccountType": "Standard_LRS"
            },
            "name": "[concat(parameters('virtualMachines_wl_name'), '_OsDisk_1_cb314f2bd7a44f869dcde736a6cecf97')]",
            "osType": "Linux"
          }
        }
      },
      "type": "Microsoft.Compute/virtualMachines"
    },
    {
      "apiVersion": "2025-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_wl_nsg_name'))]"
      ],
      "name": "[concat(parameters('networkSecurityGroups_wl_nsg_name'), '/SSH')]",
      "properties": {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "priority": 300,
        "protocol": "TCP",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": []
      },
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "apiVersion": "2025-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_wl_vnet_name'))]"
      ],
      "name": "[concat(parameters('virtualNetworks_wl_vnet_name'), '/default')]",
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "type": "Microsoft.Network/virtualNetworks/subnets"
    },
    {
      "apiVersion": "2025-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_wl_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_wl_vnet_name'), 'default')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_wl_nsg_name'))]"
      ],
      "kind": "Regular",
      "location": "koreacentral",
      "name": "[parameters('networkInterfaces_wl837_name')]",
      "properties": {
        "auxiliaryMode": "None",
        "auxiliarySku": "None",
        "disableTcpStateTracking": false,
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": true,
        "enableIPForwarding": false,
        "ipConfigurations": [
          {
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_wl837_name')), '/ipConfigurations/ipconfig1')]",
            "name": "ipconfig1",
            "properties": {
              "primary": true,
              "privateIPAddress": "10.0.0.4",
              "privateIPAddressVersion": "IPv4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_wl_ip_name'))]",
                "properties": {
                  "deleteOption": "Delete"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_wl_vnet_name'), 'default')]"
              }
            },
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations"
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_wl_nsg_name'))]"
        },
        "nicType": "Standard"
      },
      "type": "Microsoft.Network/networkInterfaces"
    }
  ],
  "variables": {}
}
